# ska-oso-ptt-services

./: .gitlab-ci.yml  .release  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  ska_oso_pdm-15.1.0-py3-none-any.whl  ska_oso_pdm-15.2.0-py3-none-any.whl  temp_ska_oso_pdm-15.2.0-py3-none-any.whl
.make/: .gitlab-ci.yml  .make-dependencies-support  .make-js-support  .make-k8s-support  .make-metadata-support  .make-oci-support  .make-python-support  .make-release-support  ansible.mk  bats.mk  cpp.mk  deb.mk  dependencies.mk  docs.mk  helm.mk  js.mk  k8s.mk  oci.mk  python.mk  raw.mk  release.mk  rpm.mk  tmdata.mk
.make/resources/: convert_umbrella_chart_to_helmfile.py
.make/tests/: Makefile
.make/tests/unit/: 04_helm.bats  05_oci.bats  17_dependencies.bats
charts/ska-oso-ptt-services/: Chart.yaml  values.yaml
charts/ska-oso-ptt-services-umbrella/: Chart.yaml  values.yaml
charts/ska-oso-ptt-services-umbrella/charts/: ska-db-oda-umbrella-4.1.0.tgz  ska-db-oda-umbrella-5.3.3.tgz  ska-db-oda-umbrella-6.0.0.tgz  ska-oso-ptt-services-0.1.0.tgz  ska-oso-ptt-services-1.0.0.tgz
charts/ska-oso-ptt-services/templates/: _helpers.tpl  environment.yaml  kafka-data-persistentvolumeclaim.yaml  kafka-deployment.yaml  rest.yaml  zookeeper-data-persistentvolumeclaim.yaml  zookeeper-deployment.yaml
charts/ska-oso-ptt-services/tests/: environment_test.yaml
docs/: restapi.rst
docs/openapi/: openapi.json  openapi_utils.py
docs/src/: CHANGELOG.rst  conf.py  index.rst  persistence.rst
docs/src/api/: overview.rst  rest_api.rst
src/: poetry-requirements.txt
src/ska_oso_ptt_services/: __init__.py  api.py  app.py  wsgi.py
src/ska_oso_ptt_services/common/: constant.py  error_handling.py  utils.py
src/ska_oso_ptt_services/entity_status/: client.py  status_entity.py  test_api.py  utils.py
src/ska_oso_ptt_services/models/: models.py
src/ska_oso_ptt_services/openapi/: ptt-openapi-v1.yaml
src/ska_oso_ptt_services/rest/: __init__.py  config.py  flask_oda.py  flaskoda.py  wsgi.py
src/ska_oso_ptt_services/rest/api/: resources.py
src/ska_oso_ptt_services/rest/openapi/: eb-jsonschema.yaml  eb-status-history-jsonschema.yaml  eb-status-openapi-v1.yaml  oso-components-openapi-v1.yaml  prj-jsonschema.yaml  prj-status-history-jsonschema.yaml  prj-status-openapi-v1.yaml  ptt-openapi-v1.yaml  sbd-jsonschema.yaml  sbd-status-history-jsonschema.yaml  sbd-status-openapi-v1.yaml  sbi-jsonschema.yaml  sbi-status-history-jsonschema.yaml  sbi-status-openapi-v1.yaml
src/ska_oso_ptt_services/routers/: app.py  ebs.py  error_handling.py  errors.py  prjs.py  sbds.py  sbis.py  status.py
src/ska_oso_ptt_services/routers/api/: ebs.py  prjs.py  sbds.py  sbis.py
src/ska_oso_ptt_services/routers/api/response_files/: sbd_json_with_status_response.json  sbi_status_history_response.json  sbi_with_status_response.json
src/ska_oso_ptt_services/routers/response_files/: eb_status_response.json  eb_with_status_response.json  sbd_status_response.json  sbds_with_status_response.json  status_entity_response.json
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_ska_oso_ptt_services.py
tests/unit/ska_oso_ptt_services/: test_ska_oso_ptt_services.py  utils.py
tests/unit/ska_oso_ptt_services/common/: constant.py
tests/unit/ska_oso_ptt_services/files/: testfile_sample_eb_status.json  testfile_sample_eb_status_history.json  testfile_sample_eb_with_status.json  testfile_sample_multiple_ebs_with_status.json  testfile_sample_multiple_prjs_with_status.json  testfile_sample_multiple_sbds_with_status.json  testfile_sample_multiple_sbis_with_status.json  testfile_sample_prj_status.json  testfile_sample_prj_status_history.json  testfile_sample_prj_status_version.json  testfile_sample_prj_with_status.json  testfile_sample_sbd_json_with_status.json  testfile_sample_sbd_status.json  testfile_sample_sbd_status_history.json  testfile_sample_sbd_status_version.json  testfile_sample_sbi_status.json  testfile_sample_sbi_status_history.json  testfile_sample_sbi_with_status.json
tests/unit/ska_oso_ptt_services/rest/: conftest.py  test_resources.py
tests/unit/ska_oso_ptt_services/routers/: test_api.py  test_common.py  test_ebs.py  test_entity_common_apis.py  test_prjs.py  test_sbds.py  test_sbis.py  test_status.py
tests/unit/ska_oso_ptt_services/routers/test_data_files/: testfile_sample_eb_status_history.json  testfile_sample_eb_with_status.json  testfile_sample_multiple_ebs_with_status.json  testfile_sample_multiple_prjs_with_status.json  testfile_sample_multiple_sbds_with_status.json  testfile_sample_prj_status_history.json  testfile_sample_prj_status_version.json  testfile_sample_sbd_status_history.json  testfile_sample_sbd_status_version.json  testfile_sample_sbi_status_history.json
tests/unit/ska_oso_ptt_services/test_data_files/: testfile_sample_prj_with_status.json
