[tool.poetry]
name = "ska-oso-ptt-services"
version = "1.0.0"
description = "Project Tracking Tool"
authors = ["Team Nakshatra"]
license= "BSD-3-Clause"
readme = "README.md"

[[tool.poetry.source]]
name = 'skao'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[[tool.poetry.source]]
 name = "gitlab"
 url = 'https://gitlab.com/api/v4/projects/27507143/packages/pypi/simple'

[tool.poetry.dependencies]
python = "^3.10"
connexion = {extras = ["swagger-ui"], version = "^2.14.0"}
ska-ser-logging = "^0.4.1"
gunicorn = "^20.1.0"
requests = "^2.27.1"
prance = {version = "^23.6.21.0", extras = ["osv"]}
python-dateutil = "^2.8.2"
# Pinning older version because of https://github.com/python-openapi/openapi-spec-validator/issues/201
jsonschema = "4.17.3"
ska-db-oda = "5.3.0-dev.cb1afbb91"
deepdiff = "^7.0.1"
pydantic-core = "^2.20.1"
annotated-types = "^0.7.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
pylint = "^2.8.2"
pytest = "^7.1.0"
pytest-cov = "^2.10.1"
isort = "^5.6.4"
flake8 = "^5.0.4"
pylint-junit = "^0.3.2"
coverage = "^6.1.1"
pytest-json-report = "^1.4.1"
platformdirs = "^2.5.1"

[tool.poetry.group.docs.dependencies]
sphinxcontrib-openapi= "^0.7.0"
ska-ser-sphinx-theme = "^0.1.2"

[tool.pytest.ini_options]
addopts = "-v"

[tool.flake8]
docstring-style = "sphinx"
rst-directives = "literalinclude"
rst-roles = ["py:attr", "py:class", "py:const", "py:exc", "py:func", "py:meth", "py:mod"]
enable = "DAR104"
max-complexity = 10

# E203 and W503 conflict with black
ignore = ["E203", "W503"]

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "fixme",
]
enable = ["useless-suppression"]

[tool.pylint.similarities]
min-similarity-lines = 7
ignore-imports = "yes"

[tool.black]
line-length = 88
preview = true
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | src/ska_oso_slt_services/rest/openapi/__submodules__
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
line_length = 88
skip = "src/ska_oso_slt_services/rest/openapi/__submodules__"

[tool.pylint]
disable = "C,R,W3101,W0511"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"